Script metadata works